# expense_tracker

./: Cargo.toml  README.md  build_log.txt
src/: main.rs
src/clients/: appwrite.rs  mod.rs
src/handlers/: expense.rs
src/models/: expense.rs  mod.rs  user.rs
